src/index.css
.Container {
  display: flex;
  flex: 1;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  justify-content: center;
  flex-direction: row;
  text-decoration: none;
}

.Container:hover {
  cursor: pointer;
}

.Button {
  display: flex;
  flex-direction: row;
  border: none;
  background-size: 125%;
  transition: 0.8s;
  background-image: linear-gradient(
    45deg,
    #405de6,
    #5851db,
    #833ab4,
    #c13584,
    #e1306c,
    #fd1d1d
  );
  border-radius: 2.5px 2.5px 2.5px 2.5px;
  color: #fafafa;
  outline: none;
  cursor: pointer;
}

.Button:hover {
  background-position: right;
}

.IconContainer {
  width: 13px;
}

.Icon {
  font-size: 15px;
}

.UserName {
  font-size: 11px;
  padding: 2px;
  padding-left: 5px;
}

.Bubble {
  display: flex;
  color: #000;
  background-color: #fafafa;
  padding-right: 8px;
  margin-left: 10px;
  border-radius: 4px 4px 4px 4px;
  border: 1px solid #dbdbdb;
  font-size: 11px;
  height: 20px;
}

.Bubble:before {
  content: "";
  position: relative;
  top: 50%;
  width: 8px;
  height: 7.5px;
  background-color: #fafafa;
  border: 1px solid #dbdbdb;
  border-top: none;
  border-right: none;
  transform: translateY(-50%) translateX(-50%) rotate(45deg);
  right: -0.5px;
}

